# Am-I-Alive

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  example.toml  index.html  styles.css
config/: nginx.conf
src/: api.rs  config.rs  database.rs  index.rs  main.rs  pow.rs  redundancy.rs  state.rs  templating.rs
templates/: heartbeat.html  index.html
www/: index.html  send_heartbeat.js  styles.css
