[package]
name = "am-i-alive"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "amialived"

[dependencies]
axum = { version = "0.7", features = ["default", "ws", "macros"] }
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
askama = "0.12"
argon2 = "0.5.3"
toml = "0.7"
pow = "0.2"
serde = "1"
serde_json = "1"
rand = "0.9"
