[package]
name = "am-i-alive"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "amialived"

[dependencies]
argon2 = "0.5.3"
askama = "0.12"
axum = { version = "0.7", features = ["default", "ws", "macros"] }
chrono = "0.4"
hex = "0.4"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1"
sha2 = "0.9"
tokio = { version = "1", features = ["full"] }
toml = "0.7"
